Fix spacing after headings in FAQ section

--- a/support-frontend/assets/components/text/text.scss
+++ b/support-frontend/assets/components/text/text.scss
@@ -28,6 +28,7 @@
 
 .component-text__heading {
   @include gu-fontset-heading;
+  margin-bottom: $gu-v-spacing;
 }
 
 .component-text__callout {
